* Changed: <txp:search_input /> accepts a "match" attribute. Possible values: "exact", "any" or "all" (default).
* Changed: <txp:css /> accepts a "name" attribute. Attribute "n" is deprecated.
* Changed: <txp:image_index /> accepts a "category" attribute. Attribute "c" is deprecated.
* Changed: <txp:breadcrumb /> accepts a "separator" attribute. Attribute "sep" is deprecated.
* Changed: <txp:if_custom_field /> accepts a "value" attribute. Attribute "val" is deprecated. Added attributes "match" and "separator"
* Changed: <txp:feed_link />, <txp:link_feed_link />, <txp:popup />, <txp:search_input /> accept a "class" attribute.
* Changed: Use percent-encoding in URLs as a RFC-1738-compliant fallback for languages lacking a suitable transliteration array.
* Changed: Silence E_STRICT warnings in "live" production mode.
* Removed: "Friendly" CSS editor.
* Developer: pluggable_ui() in the images tab.
* Developer: Style sheets are stored as plain text in the database - no more base64-encoding.
* Developer: Textpacks, a method to install i18n strings from uploaded text files and from plugins.
* Developer: article_format_info(), link_format_info(), and get_groups() convenience functions
* Textile 2.2 adds support for note lists, definition lists, thead, tbody, tfoot, table summary, table caption, table colgroup, glyphs for fractions, degrees and plusminus et cetera.
* jQuery 1.4.2
* Incutio XML-RPC Library 1.7.4

Changes in 4.2.0

* Feature: Extendable admin-side themes. "Classic" and "Remora" theme contained in the core package, user-contributed themes available from http://textgarden.org/layouts/?c=txp-admin
* Feature: Capability for multi-site file system layouts (thanks: Sam Weiss)
* Feature: Role-based permission checks for images, links and files
* Feature: Save various pane toggle states
* Feature: Store author of links and files
* Feature: Automatic adjustment for DST (requires PHP 5.2+, fall back to manual adjustment for servers running older PHPs)